k8s/apps/bot-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timetable-k8s-bot
  labels:
    app: bot
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: bot
  template:
    metadata:
      labels:
        app: bot
    spec:
      containers:
      - name: bot
        image: ghcr.io/alexandrshevchenko1/bot:master
        imagePullPolicy: "Always"
