k8s/apps/django-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
  labels:
    app: django
spec:
  type: LoadBalancer
  externalIPs:
    - 10.99.190.58
  ports:
    - port: 8000
  selector:
    app: django
