k8s/apps/django-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timetable-k8s-django-deployment
  labels:
    app: django
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: timetable-backend-app
        image: ghcr.io/ohlomonchick/timetablecloudproject:main
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8000
#      imagePullSecrets:
#        - name: ghcr-login-secret
---
apiVersion: v1
kind: Service
metadata:
  name: django
  labels:
    app: django
spec:
  type: ClusterIP
  ports:
    - port: 8000
  selector:
    app: django
