k8s/apps/vue-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timetable-k8s-vue-deployment
  labels:
    app: vue
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: vue
  template:
    metadata:
      labels:
        app: vue
    spec:
      containers:
      - name: vue
        image: ghcr.io/ohlomonchick/timetablecloudproject-frontend:master
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
#      imagePullSecrets:
#        - name: ghcr-login-secret
---
apiVersion: v1
kind: Service
metadata:
  name: vue
  labels:
    app: vue
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: vue
