k8s/apps/timetable-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timetable-ingress
spec:
  rules:
   - host: timetable.altlms.com
     http:
        paths:
          - pathType: Prefix
            path: /admin
            backend:
              service:
                name: django
                port:
                  number: 8000
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: django
                port:
                  number: 8000
          - pathType: Prefix
            path: /
            backend:
              service:
                name: vue
                port:
                  number: 8080
